@@ -119,9 +119,6 @@ This file contains the script to bundle the DataWarrior application for OSX.
           <option value="-Xdock:name=${bundle.name}"/>
           <option value="-Xmx4096M" name="Xmx"/>
           <option value="--add-exports java.base/jdk.internal.module=ALL-UNNAMED"/>
-          <option value="--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED"/>
-          <option value="--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED"/>
-          <option value="--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED"/>
           <option value="-Dapple.laf.useScreenMenuBar=true"/>
           <option value="-Dcom.apple.macos.use-file-dialog-packages=true"/>
           <option value="-Dcom.apple.mrj.application.apple.menu.about.name=${bundle.name}"/>
